--- a/AngularTestSite/src/app/app.component.html
+++ b/AngularTestSite/src/app/app.component.html
@@ -1,18 +1,16 @@
-<html>
-<head>
 
-</head>
-<body>
-  <div>
-    Test Angular.
-    <nav>
-      <a routerLink="/login">Login</a> &nbsp;
-      <a routerLink="/departments"> Departments</a> &nbsp;
-      <a routerLink="/employees"> Employees </a> &nbsp;
-      <a routerLink="/products"> ProductDetails </a> &nbsp;
-    </nav>
+<div>
+  Test Angular.
+  <nav>
+    <a routerLink="/login">Login</a> &nbsp;
+    <a routerLink="/departments"> Departments</a> &nbsp;
+    <a routerLink="/employees"> Employees </a> &nbsp;
+    <a routerLink="/productdetail"> ProductDetail </a> &nbsp;
+    <a routerLink="/productlist"> ProductList </a> &nbsp;
+  </nav>
 
-    <router-outlet>abcd</router-outlet>
-  </div>
-</body>
-</html>
+
+</div>
+
+<router-outlet>display</router-outlet>
+<!-- content display here  -->
